<resources>
    <string name="app_name">Anime List</string>
    <string name="tv_rating_value">10.0</string>
    <string name="tv_type">TV</string>
    <string name="main_activity_vh_anime_name">Anime</string>
    <string name="main_activity_vh_anime_episodes">xx episodes</string>
    <string name="nav_item_main">Main</string>
    <string name="nav_item_like">Like</string>
    <string name="nav_item_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="add">Add</string>
    <string name="episode_name">Episode name</string>
    <string name="episodes">Episodes</string>
    <string name="videos">Videos</string>
    <string name="pictures">Pictures</string>
    <string name="reviews">Reviews</string>
</resources>