<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottom_navigation_graph"
    app:startDestination="@+id/navigation_main">

    <fragment
        android:id="@+id/navigation_main"
        android:name="com.example.anime_app.presenter.view.MainFragment"
        android:label="@string/nav_item_main"
        tools:layout="@layout/fragment_main" />

    <fragment
        android:id="@+id/navigation_like"
        android:name="com.example.anime_app.presenter.view.LikeFragment"
        android:label="@string/nav_item_like"
        tools:layout="@layout/fragment_like" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.example.anime_app.presenter.view.SettingsFragment"
        android:label="@string/nav_item_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>

